--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,2 +1,9 @@
+/* make the customizations */
+$theme-colors: (
+    "info": tomato,
+    "danger": teal,
+    "success": $success
+);
+
 /* import bootstrap to set changes */
 @import '~bootstrap/scss/bootstrap';
