--- a/src/assets/scss/component/contact.scss
+++ b/src/assets/scss/component/contact.scss
@@ -1,7 +1,7 @@
 .contact-list {
   position: absolute;
-  height: 600px;
-  width: 95%;
+  height: 80%;
+  width: 90%;
   overflow-y: scroll;
   margin: 0px !important;
   margin-top: -2% !important;
@@ -22,4 +22,14 @@
   background-color: $grey !important;
   border-color: $grey-2 !important;
   color: $dark !important;
+}
+
+.table-striped tbody tr:nth-of-type(2n+1) {
+  background-color: $success-2 !important;
+  border: none;
+}
+
+.table-hover tbody tr:hover {
+  background-color: $success-2 !important;
+  border: none;
 }
