--- a/src/assets/scss/component/statistic.scss
+++ b/src/assets/scss/component/statistic.scss
@@ -1,3 +1,16 @@
 .card-statistic {
   background-color: $success-2 !important;
+  .card-body {
+    padding: 0.5rem !important;
+  }
+}
+
+.recharts-legend-wrapper {
+  bottom: 5px !important;
+}
+
+.ticket {
+  height: 290px;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
