--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -1,6 +1,7 @@
 $success: #58af7e;
 $success-2:#f1faf7; // Row Table
-$dark: #49565f;
+$dark: #495062; // Font Bold
 $grey: #f3f4f6;
 $grey-2:#dee2e6; //Border accent
 $purle:#6261ba; 
+$primary: #6698ef;  
