--- a/src/assets/scss/component/statistic.scss
+++ b/src/assets/scss/component/statistic.scss
@@ -14,3 +14,10 @@
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+@media only screen and (max-width: 600px) { 
+  .recharts-wrapper {
+    overflow-x: scroll;
+    width: 100% !important;
+  }
+}
